# FMBS270426

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  ESCOPO.md  README.md  pyproject.toml
app/: config.py  main.py
docs/: BLING_SETUP.md  setup_evolution.md
scripts/: _audio_check.py  _gen_test_audio.py  _persistence_check.py  _post_rec_check.py  apply_migration.py  bling_initial_sync.py  chat.py  debug_custom_fields_response.py  diagnose_attributes.py  reparse_attributes.py  replay_felipe.py  replay_preco_categoria.py  run_local.sh  seed_catalog.py  seed_knowledge_base.py  seed_via_rest.py  smoke_consultivo.py  smoke_matrix.py  smoke_supervisor.py  sprint211_smoke.py  sprint21_smoke.py  sprint22_smoke.py  sprint23_smoke.py  sprint24_smoke.py  sprint2_smoke.py
supabase/: config.toml
tests/: conftest.py  test_admin.py  test_amnesia_fix.py  test_anti_rerun.py  test_attribute_inquiry.py  test_attribute_parser.py  test_attribute_real_fields.py  test_audio_hardening.py  test_bling_custom_fields.py  test_bling_integration.py  test_category_and_price.py  test_category_filter.py  test_contextual_pitch.py  test_debounce_buffer.py  test_detail_request.py  test_determined_customer.py  test_diagnose_flow.py  test_dossier_send.py  test_evolution.py  test_followup_flows.py  test_fuzzy_match.py  test_graph.py  test_help_request.py  test_image_identification.py  test_lgpd.py  test_marca_routing.py  test_matcher_tolerant.py  test_media.py  test_message_splitter.py  test_multi_product_context.py  test_no_phantom_phrases.py  test_openai_client.py  (+22 more)
(+79 files in other folders)
